# python_pastebin_app

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  ruff.toml  start_service.sh
app/: __init__.py  app.py
app/database/: __init__.py  fauna_db.py
app/models/: __init__.py  fauna_model.py  sql_model.py
app/models/database/: __init__.py  fauna_model.py
app/models/validation/: __init__.py  incoming.py  outgoing.py  updating.py
app/routers/: get_paste.py  recieve_paste.py
app/routers/pastes/: create.py  delete.py  read.py  update.py
appui/: package-lock.json  package.json
tests/: test_app.py
tests/data/: test_db.db
