[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joseph Sayler <joseph.sayler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.70.1"}
faunadb = "^4.1.1"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
